@@ -1,3 +1,29 @@
+/* GIMP LiquidRescaling Plug-in
+ * Copyright (C) 2007 Carlo Baldassi (the "Author") <carlobaldassi@yahoo.it>.
+ * All Rights Reserved.
+ *
+ * This plugin implements the algorithm described in the paper
+ * "Seam Carving for Content-Aware Image Resizing"
+ * by Shai Avidan and Ariel Shamir
+ * which can be found at http://www.faculty.idc.ac.il/arik/imret.pdf
+ *
+ * The code in this file is taken from gimpwidgets.c
+ * Copyright (C) 2000 Michael Natterer <mitch@gimp.org>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the Licence, or
+ * (at your option) any later version.
+
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ 
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, see <http://www.gnu.org.licences/>.
+ */
+
 #ifndef __ALT_COORDINATES_H__
 #define __ALT_COORDINATES_H__
 
