@@ -93,7 +93,9 @@ enum _OperMode
 {
   OPER_MODE_NORMAL,
   OPER_MODE_LQRBACK,
-  OPER_MODE_SCALEBACK
+  OPER_MODE_SCALEBACK,
+  OPER_MODE_SCALEBACKW,
+  OPER_MODE_SCALEBACKH
 };
 
 typedef enum _OperMode OperMode;
