@@ -1,5 +1,6 @@
-2009-01-25 Carlo Baldassi <carlobaldassi@gmail.com>
+2009-01-27 Carlo Baldassi <carlobaldassi@gmail.com>
 	* new : interactive interface
+	* new : with and height (std) scaleback modes
 
 2008-11-24 Carlo Baldassi <carlobaldassi@gmail.com>
 
